# test

./: .replit  pyproject.toml
.github/workflows/: format.yaml
beans/: beans.py
docs/doctrees/: beans.doctree  environment.pickle  index.doctree
docs/html/: beans.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst
