[tool.poetry]
name = "sphinxtest"
version = "0.1.0"
description = ""
authors = ["mrlegohead0x45"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.3.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
